--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /fastmedical/nbproject/private/
 /fastmedical_front/nbproject/private/
+/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
